Closed
Bug 535528
Opened 16 years ago
Closed 16 years ago
Mail Compose - address autocomplete causes application freeze (OE Contacts / Windows Address Book related)
Categories
(MailNews Core :: Address Book, defect)
Tracking
(thunderbird3.0 .1-fixed)
RESOLVED
FIXED
Thunderbird 3
| Tracking | Status | |
|---|---|---|
| thunderbird3.0 | --- | .1-fixed |
People
(Reporter: hhgygy, Assigned: neil)
References
Details
(Keywords: fixed-seamonkey2.0.2, fixed-seamonkey2.0.3, hang)
Attachments
(1 file)
|
1.26 KB,
patch
|
standard8
:
review+
standard8
:
superreview+
standard8
:
approval-thunderbird3.0.1+
standard8
:
approval-seamonkey2.0.3+
|
Details | Diff | Splinter Review |
User-Agent: Mozilla/5.0 (Windows; U; Windows NT 5.1; en-US; rv:1.9.1.4) Gecko/20091017 SeaMonkey/2.0
Build Identifier: Mozilla/5.0 (Windows; U; Windows NT 5.1; en-US; rv:1.9.1.4) Gecko/20091017 SeaMonkey/2.0
When I compose a new mail and enter the first letter of the addressee, the autocomplete freezes the entire application suite
This has been reported in Bug 509996
Reproducible: Always
Steps to Reproduce:
1.Open Compose New Mail
2.Insert any letter in the addressee field
3.
Actual Results:
The whole application freezes,, can be closed with Ctrl-Alt-Del only
Expected Results:
Should autocomplete the addressee (first matching name)
It is in the newest release 2.0.1.
I restored Seamonkey 2.0 version which works fine in this respect.
Comment 1•16 years ago
|
||
I can confirm this Bug using:
Build identifier: Mozilla/5.0 (Windows; U; Windows NT 5.1; en-US; rv:1.9.1.7pre) Gecko/20091216 Mnenhy/0.8.0pre2 SeaMonkey/2.0.2pre
and some previous 1.9.1.x-Nightly-Builds later than the SeaMonkey 2.0-Release-Builds.
Unfortunately I can not provide better Steps to reproduce. Sometimes I was able to add Recipients via Autocomplete, but mostly SeaMonkey hangs and must be killed using the Task-Manager. First I have suspected something in my old Addressbooks, so I have exported them as csv, and reimported them. Seems, that it has helped for some days, but now I get the hang again. Especially when I try to edit an added E-Mail Address (Change Name or part of Address), SeaMonkey hangs.
I have seen the hang only on WinXP SP3, but not on Win2k, neither on Windows 7.
Status: UNCONFIRMED → NEW
Ever confirmed: true
(In reply to comment #1)
Yeah I also restored my Address Book believing that it might be the problem
Update.
Now, Seamonkey has updated itself to 2.0.1. and the same bug occurred.
BUT
I exported and then deleted all my e-mail addresses and then reimported them and now it seems to work.
Update.
Same bug happened in the other user profile we use on my computer.
I exported and deleted all e-mail addresses and then reimported them as above.
It also seems to work now.
Comment 5•16 years ago
|
||
Chances are the regression has been introduced by the fix for bug 447927.
Setting Version to 2.0 branch until someone can verify with 2.1a1pre nightlies (which are probably affected as well).
To all commenters: Please tell how many address books and mailing lists you have. I don't know whether it's important, but maybe it helps.
Version: unspecified → SeaMonkey 2.0 Branch
Comment 6•16 years ago
|
||
Encountered same problem in Seamonkey 2.0.1. Only had contacts in Address Book's "Personal Address Book". Export these contacts and deleted. On restarting Seamonkey, problem persisted. Finally deleted the empty "OE Contacts" address book, and Seamonkey started working again.
Comment 7•16 years ago
|
||
My observation occurred on a PC running Windows XP Pro SP3. Only one address book had any contacts, the "Personal Address Book" which contained a total of 57 contacts.
Comment 8•16 years ago
|
||
(In reply to comment #6)
> Finally deleted the empty "OE Contacts" address book, and Seamonkey
> started working again.
Ah! Does anyone else here have such an AB? I don't (I never used OE).
Warning: I'm not absolutely sure but I remember the OE Contacts AB is actually OE's AB so deleting its contents might delete the original contacts!
Comment 9•16 years ago
|
||
A user in the German newsgroups, Peter Müller, just confirmed that he also sees this problem in connection with the OE AB. hhgygy, Tobias, can you confirm this also applies to you?
Comment 10•16 years ago
|
||
I used the automatic update to 2.0.1 from 2.0 without touching my address books or anything else in my profile, and I have experienced no crashes when using autocomplete.
My address book was created in an earlier version of SM and dragged into the 2.0 profile. I do not collect addresses in the Collected Addresses AB.
My computer is a Mac G4 (PPC) with OS X 10.4.11.
Comment 11•16 years ago
|
||
Some details I forgot to mention: when Seamonkey hangs, in Task Manager the seamonkey.exe process is apparently idle, using 0% CPU Time. In fact, the CPU is basically idle as well. In the Application tab, all the Seamonkey windows are listed as "Not Responding".
Comment 12•16 years ago
|
||
I am using Win XP SP2 with Seamonkey 2.0.1, my email composing windows will freeze during any ldap lookup, event I disable the network, it still freeze. When I revert back to v. 2.0. Everything back to normal.
Comment 14•16 years ago
|
||
(In reply to comment #9)
> A user in the German newsgroups, Peter Müller, just confirmed that he also sees
> this problem in connection with the OE AB. hhgygy, Tobias, can you confirm this
> also applies to you?
Indeed. I have never used Outlook or OE, but I have got also an empty OE Contacts Addressbook in my current SM-Profile. The MS-Win Address Book File [User-Profile\Appdata\Microsoft\Username\username.wab] has no entries, and a Size of 173 KB. After deleting the (empty) OE Contacts Addressbook from SeaMonkey, I can not reproduce the hang anymore, so I don't try to rename/delete the username.wab-File. Thx for the hint to delete the OE Contacts ABook.
Comment 15•16 years ago
|
||
leon how to revert back to v 2.0 ?
Comment 16•16 years ago
|
||
Adjusting summary (feedback from hhgygy pending but assuming it's the same).
Summary: Mail Compose - address autocomplete causes crash (freezing) for entire Seamonkey → Mail Compose - address autocomplete causes application freeze (OE Contacts / Windows Address Book related)
| Reporter | ||
Comment 17•16 years ago
|
||
I think I have also deleted the OE contacts AB when I tried to reimport my addresses. In both of my profiles there is only Personal and Collected
Comment 19•16 years ago
|
||
Mark, any idea about this one?
Comment 20•16 years ago
|
||
(In reply to comment #19)
> Mark, any idea about this one?
I don't know much at all about the Outlook interfaces. Neil was the last one to touch them ;-)
Comment 21•16 years ago
|
||
(In reply to comment #15)
> leon how to revert back to v 2.0 ?
I uninstalled the entire 2.0.1, then reinstalled back the earlier version 2.0. The new Seamonkey keep all the user profile & setting outside so reinstalling with older or newer version is relatively easy.
Comment 22•16 years ago
|
||
Thank leon bu where i can found the v2.0. ?
| Assignee | ||
Comment 23•16 years ago
|
||
I managed to reproduce this. There seems to be some sort of deadlock between the addressbook and the main thread, but I'm not sure why it's happening yet.
Updated•16 years ago
|
Flags: blocking-seamonkey2.0.2?
Comment 24•16 years ago
|
||
I added a stance about this bug to the relnotes at http://www.seamonkey-project.org/releases/seamonkey2.0.1/#issues
| Assignee | ||
Comment 26•16 years ago
|
||
I don't think that the outlook express address book likes being searched, as the address book tries to generate the results asynchronously but the autocomplete component only tries to read the results synchronously and discards the address book presumably while the query is still in progress, which then could conceivably confuse things further.
Comment 27•16 years ago
|
||
The bug appened if one of the adress books is empty. In my case the OE directory was empty I delete it and and Seamonkey started working again.
Comment 28•16 years ago
|
||
I can confirm this bug on 2.0.1 when entering a contacts name. It also happens when clicking compose and then the address button to open the address book. Seamonkey freezes and only ctrl + alt + del can close it. I am using WinXP SP3.
Comment 30•16 years ago
|
||
I've tried a work-around technique that appears to work. After the Mail program is up and running, I open the address book and click on the Personal Address Book.
I haven't done extensive testing, but when I do that, the address completion works and Seamonkey hasn't crashed, yet.
Comment 31•16 years ago
|
||
Neil, any chance you can investigate and hopefully find a patch soon? It would be good to ship an update with that as soon as we can, with us installing OE Contacts support by default, this affects a lot of our users...
| Assignee | ||
Comment 33•16 years ago
|
||
Well, the hang shows that the MAPI session is being initiated on the async query thread, but as native events don't get processed on that thread, the MAPI session can't then be synchronised back to the main thread.
| Assignee | ||
Comment 34•16 years ago
|
||
It's just dawned on me that this is partly a regression from bug 447927.
I think that the 1.x code manually filters the entire address book, which happens synchronously for the outlook express address book.
The 2.0.0 code only searched the primary email. It tried to enumerate a directory query. This never worked with the outlook express address book, because the query executed asynchronously.
The 2.0.1 code searches both primary and secondary emails. To do this it issues two queries in quick succession. Unfortunately the address book interface has been instantiated on the query thread, and the main thread cannot communicate with it, thus causing the application to deadlock when the query thread tries to synchronously return its results.
Blocks: 447927
| Assignee | ||
Comment 35•16 years ago
|
||
Hmm, the OE express address book doesn't seem to query properly at all :-(
Comment 36•16 years ago
|
||
(In reply to comment #35)
> Hmm, the OE express address book doesn't seem to query properly at all :-(
Hmm, can we paper over that for a 2.0.x update by just excluding the OE Contacts from being queried (even if that removes some of the wanted functionality of including it) and see for a more conclusive solution on trunk later?
Comment 37•16 years ago
|
||
Also confirming exactly as hhgygy originally stated. In 2.0.1 on WinXP SP3.
Seems to be just the autocomplete when try to type in addressee. Fills in OK when Reply or when composing from address book listing. Have about 6 contact lists now. I see that OE thing. Ignored it as - do not care. Guess I cannot. Maybe I'll try the delete suggestion till fix is in.
Comment 38•16 years ago
|
||
Alternate workaround:
For me the complete hang did not appeared using the UI in en-US language instead of de-DE.
Comment 39•16 years ago
|
||
Uli:
That can only be happening by chance, as multiple people have seen this in en-US builds (and it's "de", not "de-DE").
| Assignee | ||
Comment 40•16 years ago
|
||
Attachment #419685 -
Flags: superreview?(bugzilla)
Attachment #419685 -
Flags: review?(bugzilla)
Comment 41•16 years ago
|
||
As this is effectively mailnews core, I'm moving across to the mailnews product. Although TB doesn't have outlook AB enabled by default, the capability is still included in the code if the prefs are altered.
Assignee: nobody → neil
Component: Autocomplete → Address Book
Product: SeaMonkey → MailNews Core
QA Contact: autocomplete → address-book
Version: SeaMonkey 2.0 Branch → unspecified
Comment 42•16 years ago
|
||
Comment on attachment 419685 [details] [diff] [review]
Workaround - disable autocomplete for outlook (checked in trunk and branch)
r/sr/a=Standard8
Just to note I'm happy this doesn't have tests as it would be too difficult as we'd need interfaces to outlook etc, and also approving straight away, as I know SM wants to do a 2.0.2 build soon and the outlook part shouldn't affect Thunderbird by any significant amount.
Attachment #419685 -
Flags: superreview?(bugzilla)
Attachment #419685 -
Flags: superreview+
Attachment #419685 -
Flags: review?(bugzilla)
Attachment #419685 -
Flags: review+
Attachment #419685 -
Flags: approval-thunderbird3.0.1+
Attachment #419685 -
Flags: approval-seamonkey2.0.2+
| Assignee | ||
Comment 43•16 years ago
|
||
Comment on attachment 419685 [details] [diff] [review]
Workaround - disable autocomplete for outlook (checked in trunk and branch)
Pushed changeset 2254e41e8a20 to comm-central.
Pushed changeset 9751f5dc45a4 to releases/comm-1.9.1
Attachment #419685 -
Attachment description: Workaround - disable autocomplete for outlook → Workaround - disable autocomplete for outlook (checked in trunk and branch)
Comment 44•16 years ago
|
||
As this is a branch bug, can we mark this as fixed and spin off a new bug for fixing the main issue and removing the workaround? This will enable better tracking.
status-thunderbird3.0:
--- → .1-fixed
Target Milestone: --- → Thunderbird 3.1a1
| Assignee | ||
Updated•16 years ago
|
Status: NEW → RESOLVED
Closed: 16 years ago
Flags: blocking-seamonkey2.0.2?
Keywords: fixed-seamonkey2.0.2
Resolution: --- → FIXED
Target Milestone: Thunderbird 3.1a1 → Thunderbird 3
Comment 45•16 years ago
|
||
Pushed the fix to COMM1916_20091204_RELBRANCH as well for the actual short-cycled 2.0.2 release of SeaMonkey, will mark for that as well once bug 537731 corrects flags/keywords for the fact that we short-cycle.
Updated•16 years ago
|
Keywords: fixed-seamonkey2.0.2
Comment 48•16 years ago
|
||
why is this marked as resolved fixed? Can someone post a link to an open discussion about this problem?
| Assignee | ||
Comment 49•16 years ago
|
||
(In reply to comment #48)
> why is this marked as resolved fixed?
Because it is fixed in SeaMonkey 2.1a1pre comm-central nightlies, which is where fixes first get tested. It was then marked as fixed-seamonkey2.0.3 for comm-1.9.1, which is where it got approval, and then fixed-seamonkey2.0.2, because the build engineer specifically included it in the 2.0.2 release tag.
> Can someone post a link to an open discussion about this problem?
What sort of discussion? This bug already has some discussion in it.
You need to log in
before you can comment on or make changes to this bug.
Description
•