Bug 535528 Temporarily disable nonfunctional Outlook autocomplete until we work out how to stop it from hanging r+sr=Standard8